// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders Switch correctly with more props 1`] = `
<div>
  <span
    class="za-switch za-switch--sm za-switch--disabled"
  >
    <i
      class="za-icon za-icon-loading theme-default za-switch__loadingIcon"
    />
    <span
      class="za-switch__inner"
    >
      否
    </span>
  </span>
</div>
`;

exports[`Switch renders normal Switch correctly 1`] = `
<div>
  <span
    class="za-switch"
  >
    <span
      class="za-switch__inner"
    />
  </span>
</div>
`;
